--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.15.1",
+    "@types/recharts": "^1.8.29",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
